Fixed navbar overflow issue + fixed image not showing up in workshops.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,7 +18,7 @@ body, html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 3rem;
   background-color: #d0b3b9;
   padding: 0 0.5em;
@@ -58,6 +58,11 @@ body, html {
 }
 
 #index-title {
+  padding: 10px;
+}
+
+#contact-title {
+  font-size: clamp(1rem, 10vw, 2rem);
   padding: 10px;
 }
 
@@ -172,7 +177,7 @@ p {
 
 #workshop-section {
   padding: 20px;
-  background-image: url('/Media/Images/Bachelors.jpg');
+  background-image: url('../Media/Images/Bachelors.jpg');
   background-size: cover;
   overflow: hidden;
 }
@@ -287,4 +292,3 @@ iframe {
   text-decoration: none;
   color: rgb(254, 244, 235);
 }
->>>>>>> Lucas
